--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "test:Empty": "vue serve ./src/components/Empty/test.vue"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "core-js": "^3.6.5",
+    "mockjs": "^1.1.0",
     "vue": "^2.6.11",
     "vue-router": "^3.4.9"
   },
