--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.7.2",
     "core-js": "^3.6.5",
     "mockjs": "^1.1.0",
+    "querystring": "^0.2.1",
     "vue": "^2.6.11",
     "vue-router": "^3.4.9"
   },
